js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-not-extensible-args.js
DONOTEVALUATE
(
)
;
do
{
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
while
(
false
)
;
